--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
                 <img id="profile-pic" src="./images/profileimage.jpg" alt="Bill">
                 <h1>Bilguun Gantumur</h1>
             </div>
+            <div style="flex: auto; padding: 10px">
+                <ul>
+                    <li>W1D1 - this Homepage</li>
+                    <li>W1D2 - About Me</li>
+                    <li>W1D3 - Recipe</li>
+                    <li>W1D4 - movie review</li>
+                    <li>W1D5 - MP3 Library</li>
+                    <li>W1D6 - Movie Review PHP</li>
+                </ul>
+            </div>
         </div>
     </main>
+    <footer style="position: fixed; bottom: 0">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Ftemuuhei.github.io%2FCS472%2Findex.html">
+            <img src="./images/w3c-html.png" alt="html validator" />
+        </a>
+    </footer>
 </body>
 </html>
