--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <hr>
     <main>
-        <div style="display: flex; flex-flow: row">
+        <div style=" flex-flow: row">
             <div style="text-align: center">
                 <img id="profile-pic" src="./images/profileimage.jpg" alt="Bill">
                 <h1>Bilguun Gantumur</h1>
