--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li>W1D1 - this Homepage</li>
                     <li>W1D2 - About Me</li>
-                    <li>W1D3 - Recipe</li>
+                    <li><a href="./Lab2/pie.html">Lab02 - Recipe</a></li>
                     <li>W1D4 - movie review</li>
                     <li>W1D5 - MP3 Library</li>
                     <li>W1D6 - Movie Review PHP</li>
