--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div style="flex: auto; padding: 10px">
                 <ul>
                     <li>W1D1 - this Homepage</li>
-                    <li>W1D2 - About Me</li>
+                    <li><a href="./about/about.html">W1D2 - About Me</a></li>
                     <li><a href="./Lab2/pie.html">Lab02 - Recipe</a></li>
                     <li>W1D4 - movie review</li>
                     <li>W1D5 - MP3 Library</li>
