--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li>W1D1 - this Homepage</li>
                     <li><a href="./about/about.html">W1D2 - About Me</a></li>
                     <li><a href="./Lab2/pie.html">Lab02 - Recipe</a></li>
-                    <li>W1D4 - movie review</li>
+                    <li><a href="./Lab3/tmnt.html">Lab03 - Movie Review</a></li>
                     <li>W1D5 - MP3 Library</li>
                     <li>W1D6 - Movie Review PHP</li>
                 </ul>
