--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </main>
     <footer style="position: fixed; bottom: 0">
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Ftemuuhei.github.io%2FCS472%2Findex.html">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fbilguungantumur.github.io%2F">
             <img src="./images/w3c-html.png" alt="html validator" />
         </a>
     </footer>
