lesson4 and lesson 5

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
                     <li><a href="./about/about.html">W1D2 - About Me</a></li>
                     <li><a href="./Lab2/pie.html">Lab02 - Recipe</a></li>
                     <li><a href="./Lab3/tmnt.html">Lab03 - Movie Review</a></li>
-                    <li>W1D5 - MP3 Library</li>
-                    <li>W1D6 - Movie Review PHP</li>
+                    <li>Lesson 4: CSS for Page Layout
+                        <ul> 
+                            <li><a href="lesson4/FlexBox/index.html">FlexBox version</a></li>
+                            <li><a href="lesson4/Grid/index.html">Grid version</a></li>
+                            <li><a href="lesson4/Bootstrap/index.html">Bootstrap version</a></li>
+                        </ul>
+                    </li>
+                    <li><a href = "lesson5/index.html">Lesson 5 - Basic of Java Script Week 3</a></li>    
+                    
                 </ul>
             </div>
         </div>
