--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         </ul>
                     </li>
                     <li><a href = "lesson5/index.html">Lesson 5 - Basic of Java Script Week 3</a></li>    
+                    <li><a href = "lesson6/index.html">Lesson 6 - Scope, closures and encapsulation</a></li>    
                     
                 </ul>
             </div>
