--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
                     </li>
                     <li><a href = "lesson5/index.html">Lesson 5 - Basic of Java Script Week 3</a></li>    
                     <li><a href = "lesson6/index.html">Lesson 6 - Scope, closures and encapsulation</a></li>    
-                    
+                    <li>
+                        <a href="#">Lesson 7: (Objects, Modules, Inheritance)</a>
+                        <ul>
+                          <li>
+                            <a href="homework07/ascii.html">ASCII animation</a>
+                          </li>
+                          <li>
+                            <a href="homework07_functionalprogramming/index.html">Functional Programming</a>
+                          </li>
+                        </ul>
+                      </li>
                 </ul>
             </div>
         </div>
