--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                           </li>
                         </ul>
                       </li>
+                      <li>
+                        <a href="lab08/maze.html">Lesson 8: DOM, jQuery (Maze)</a>
+                      </li>
+                      <li>
+                        <a href="homework09/tasklistapp.html">Lesson 9: jQuery (Task Tracker project and jQuery)</a>
+                      </li>
                 </ul>
             </div>
         </div>
